Construct folder structure & write README.md

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,19 +1,24 @@
 cmake_minimum_required(VERSION 3.10.0)
-project(ImGUI_Project VERSION 0.1.0 LANGUAGES C CXX)
+set(PROJECT_NAME ui_project)
+project(${PROJECT_NAME} VERSION 0.1.0 LANGUAGES C CXX)
 
 set(CMAKE_TOOLCHAIN_FILE "C:/src/vcpkg/scripts/buildsystems/vcpkg.cmake")
 
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
 
-file(GLOB src_file src/*.cpp)
+set(SOURCE_FILE_DIR ${CMAKE_SOURCE_DIR}/src/)
 
+file(GLOB src_file ${SOURCE_FILE_DIR}/*.cpp)
+file(GLOB imgui_src_file ${SOURCE_FILE_DIR}/*/*.cpp)
 
-add_executable(ImGUI_Project ${src_file})
+include_directories(${CMAKE_SOURCE_DIR}/src)
+
+add_executable(${PROJECT_NAME} ${src_file} ${imgui_src_file})
 
 find_package(imgui CONFIG REQUIRED)
 find_package(glfw3 REQUIRED)
 find_package(spdlog CONFIG REQUIRED)
 
-target_link_libraries(ImGUI_Project PUBLIC imgui::imgui)
-target_link_libraries(ImGUI_Project PUBLIC glfw)
-target_link_libraries(ImGUI_Project PUBLIC spdlog::spdlog_header_only)
+target_link_libraries(${PROJECT_NAME} PUBLIC imgui::imgui)
+target_link_libraries(${PROJECT_NAME} PUBLIC glfw)
+target_link_libraries(${PROJECT_NAME} PUBLIC spdlog::spdlog_header_only)
